# AI-Youtube-Shorts-Generator

./: .gitignore  AGENTS.md  INSTALL_CPU.md  README.md  channel_urls.py  command.md  files_to_render.txt  main.py  overnight_runner.py  playlist_runner.py  pyproject.toml  requirements.txt  search_runner.py  urls_runner.py
Components/: Edit.py  FaceCrop.py  History.py  LanguageTasks.py  SFX.py  Subtitles.py  TitleCard.py  Transcription.py  TranscriptionData.py  VisualEffects.py  YoutubeDownloader.py
docs/: captions_word_timing.md
